- in mode "--central-symmetry", atoms with 4 neighbours are now compared to tetrahedral environment; if angles are close to those in a tetrahedron, this criterion is used instead of central symmetry.
- in mode "--nye", if user does not provide an output file name then a default one in CFG format is created.
- option "-reduce-cell" now checks that stoichiometry is preserved.
- fixed a bug when reading and writing POSCAR files where the keywords "Selective dynamics" were involved.
- fixed a bug in mode "--density", where the density was not correctly computed if the target property was the atomic mass. Thanks to Jean Furstoss, UMET, University of Lille, France, for pointing out this bug.
- new option "-dislocation file" allows reading a dislocation Burgers vector and position from a file. For now it supports only planar dislocation loops where the Burgers vector is contained in the loop plane.
- fixed a bug in option "-cell" where option was skipped when requiring zero length for xy, yz, or xz component.
- fixed a bug in option "-orthogonal-cell" where the new number of atoms was not always correctly estimated, leading to a segmentation fault.
- fixed a bug where the position was not always computed correctly when using an operation with "box", e.g. when introducing dislocations. Thanks to Samaneh Nasiri, Friedrich-Alexander-University Erlangen-Nürnberg, Germany, for pointing out this bug.
- fixed a bug in EXPREVAL where expressions containing a factorial preceded by a parenthesis would cause a segmentation fault.
- script "install.sh" now proposes to compile Atomsk if binary does not exist in current directory.


Beta 0.11.2 (04 Nov. 2021)
--------------------------
- fixed a bug in neighbor search.
- in option "-dislocation", fixed a bug where displacements would be incorrect when the loop was not normal to Z and the Burgers vector was along Z. Thanks to Marion Borde and Jonathan Amodeo, MATEIS, University of Lyon 1, France, for pointing out this bug.