@@ -50,6 +50,8 @@
   
   <ul>
     <li class="clist"><strong>abs(x)</strong> Valeur absolue de x</li>
+    <li class="clist"><strong>int(x)</strong> Valeur entière de x</li>
+    <li class="clist"><strong>x!</strong> Factorielle de la partie entière de x</li>
     <li class="clist"><strong>sqrt(x)</strong> Racine carrée de x</li>
     <li class="clist"><strong>exp(x)</strong> Exponentielle de x</li>
     <li class="clist"><strong>ln(x)</strong> Logarithme naturel de x</li>
